[package]
name = "deepl-cli"
version = "0.1.0"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]
description = "DeepL CLI"
edition = "2018"

[[bin]]
name = "deepl"
path = "src/main.rs"

[dependencies]
seahorse = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
